# rotate

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  LICENSE.org  Makefile  README  README.md  README.org  main.vr
docs/: index.html  index.org  solarized-min.css  style.css  stylesheet.css
docs/contribute/: contribute.org
src/: common.cpp  compile.cpp  file.cpp  log.cpp  main.cpp
src/fe/: errmsgs.cpp  errmsgs.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  type.cpp  type.hpp  typechecker.cpp
src/frontend/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/frontend/include/: lexer.hpp  parser.hpp  token.hpp
src/include/: Array.hpp  ArrayList.hpp  common.hpp  compile.hpp  defines.hpp  file.hpp  log.hpp
src/utl/: common.cpp  compile.cpp  file.cpp
test/: 000_empty.vr  001_hello.vr  002_var.vr  003_comments.vr  003_func.vr  004_func.vr  005_import.vr  006_if.vr  007_loops.vr  gl_const.vr  hello.vr
